feat-backend: rota para deletar produto
