# backend/routes/api.php
@@ -18,3 +18,4 @@ Route::post('/products', [ProductController::class, 'store']);
 Route::get('/products', [ProductController::class, 'index']);
 Route::get('/products/{id}', [ProductController::class, 'show']);
 Route::put('/products/{id}', [ProductController::class, 'update']); 
+Route::delete('/products/{id}', [ProductController::class, 'destroy']);
